our staff page update

--- a/html-files/staff.html
+++ b/html-files/staff.html
@@ -70,7 +70,7 @@
     
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent2.avif" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -92,7 +92,7 @@
     
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent3.jpg" alt="" id="off-centered">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -114,7 +114,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent4.jpg" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -136,7 +136,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent5.avif" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -158,7 +158,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent6.jpg" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -180,7 +180,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent7.jpeg" alt="" id="off-centered">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -202,7 +202,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent3.webp" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -224,7 +224,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent8.webp" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
@@ -246,7 +246,7 @@
 
               <div class="agent">
                 <div class="agent-profile-picture">
-                  <img src="/photos/agents/agent1.jpg" alt="">
+                  <img src="/photos/agents/agent9.webp" alt="">
               </div>
               <div class="agent-textbox">
                   <h4>Full Name</h4>
