--- a/html-files/work-for-us.html
+++ b/html-files/work-for-us.html
@@ -34,12 +34,18 @@
     <!--Content-->
     <main class="page-body">
 
-        <span class="one">
-            <span class="two">
+        <div class="front-image">
+            <div class="main-image">
                 <img src="/photos/career3.png" alt="">
-            </span>
-            <h1>Career</h1>
-        </span>
+            </div>
+            <h1>Career?</h1>
+        </div>
+
+        <div class="page-content">
+            <h2>Do you see a Future in our Compay?</h2>
+            <span>We Sure Do!</span>
+
+        </div>
 
     </main>
 
