--- a/html-files/construction.html
+++ b/html-files/construction.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link type="text/css" rel="stylesheet" href="../css-files/header-footer.css">
+    <link type="text/css" rel="stylesheet" href="../css-files/wefssd.css">
     <meta charset="UTF-8">
     <meta name="Build Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
@@ -32,6 +33,29 @@
 
     <!--Content-->
     <main class="page-body">
+        <!--Contact Form-->
+<form action="succesfulcontact.html" class="contactform">
+    <ul>
+        <li>
+            <label for="name">Enter Your Name</label>
+            <input type="text" id="name" name="user_name"/>
+        <li>
+        <br>
+        <yi>
+            <label for="mail">Enter Your E-mail</label>
+            <input type="email" id="mail" name="user_email"/>
+        </li>
+        <br>
+        <li>
+            <label for="message">Enter Your Message To Us</label>
+            <textarea id="message" name="user_message"></textarea>
+        </li
+        <br>
+        <li class"formbutton">
+            <a href="succesfulcontact.html" type="submit">Send Your Message</a>
+        </li>
+    <ul>
+</form>
     </main>
 
 <!--Footer-->
