--- a/html-files/construction.html
+++ b/html-files/construction.html
@@ -38,7 +38,7 @@
     <ul>
         <li>
             <label for="name">Enter Your Name</label>
-            <input type="text" id="name" name="user_name"/>
+            <input type="text" id="name" name="user_name">
         </li>
         <br>
         <li>
