--- a/html-files/construction.html
+++ b/html-files/construction.html
@@ -34,7 +34,7 @@
     <!--Content-->
     <main class="page-body">
 <!--Contact Form-->
-<form class="build-form-contact">
+<form class="build-form-contact wrap">
     <div class="first-name-field">
         <label for="first-name">Enter Your First Name</label>
         <input type="text" id="first-name" name="user_name">
