added a login/create button

--- a/html-files/work-for-us.html
+++ b/html-files/work-for-us.html
@@ -34,18 +34,62 @@
     <!--Content-->
     <main class="page-body">
 
-        <div class="front-image">
-            <div class="main-image">
-                <img src="/photos/career3.png" alt="">
-            </div>
-            <h1>Career?</h1>
-        </div>
+        <section class="front-top">
 
-        <div class="page-content">
+            <img src="/photos/career3.png" alt="">
+
+            <div class="front-top-content">
+                <div class="title">
+                    <h1>Career?</h1>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="page-content">
+
             <h2>Do you see a Future in our Compay?</h2>
             <span>We Sure Do!</span>
 
-        </div>
+            <div class="content-positions">
+                <h3>Our Positions</h3>
+                <div class="positions">
+                    <a href="" class="position">
+                        <img src="/photos/constructionworker.jpg" alt="">
+                        <h4>Construction Worker</h4>
+                    </a>
+                    <a href="" class="position">
+                        <img src="/photos/realestateagentmale.jpg" alt="">
+                        <h4>Real Estate Agent</h4>
+                    </a>
+                    <a href="" class="position">
+                        <img src="/photos/engineer.jpg" alt="">
+                        <h4>Construction Engineer</h4>
+                    </a>
+                    <a href="" class="position">
+                        <img src="/photos/architect.jpg" alt="">
+                        <h4>Architect</h4>
+                    </a>
+                </div>
+            </div>
+
+            <div class="content-bottom">
+
+                <h4>The Position You're looking for is not available?</h4>
+                <p>To be notified of any new positions that become available, you can create an account or sign in.</p>
+                
+                <div class="account">
+                    <div class="create">
+                        <a href="login.html">Create Account</a>
+                    </div>
+                    <div class="login">
+                        <a href="login.html">Login</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
 
     </main>
 
