--- a/html-files/work-for-us.html
+++ b/html-files/work-for-us.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="Work For Us Page Real Estate Agency" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="AKB">
-    <title>Work For Us Page Real Estate Agency</title>
+    <title>Work For Us</title>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
 
             <div class="front-top-content">
                 <div class="title">
-                    <h1>Career?</h1>
+                    <h1>Work For Us</h1>
                 </div>
             </div>
 
