--- a/html-files/construction.html
+++ b/html-files/construction.html
@@ -62,6 +62,20 @@
     </ul>
 </form>
 
+<div class="build-page-info">
+    <div class="built-page-text">
+        <div id="built-page-header">
+            <h1>Not Sure Yet?</h1>
+        </div>
+        <div id="built-page-paragarh">
+            <p>No Worries Just Contact Us At</p>
+            <p><b>RealEstateAgency@Gmail.com</b></p>
+            <p>Or Call Us At</p>
+            <p><b>123 456 789</b></p>
+        </div>
+    </div>
+</div>
+
     </main>
 
 <!--Footer-->
