--- a/html-files/work-for-us.html
+++ b/html-files/work-for-us.html
@@ -54,19 +54,19 @@
             <div class="content-positions">
                 <h3>Our Positions</h3>
                 <div class="positions">
-                    <a href="" class="position">
+                    <a href="login.html" class="position">
                         <img src="/photos/constructionworker.jpg" alt="">
                         <h4>Construction Worker</h4>
                     </a>
-                    <a href="" class="position">
+                    <a href="login.html" class="position">
                         <img src="/photos/realestateagentmale.jpg" alt="">
                         <h4>Real Estate Agent</h4>
                     </a>
-                    <a href="" class="position">
+                    <a href="login.html" class="position">
                         <img src="/photos/engineer.jpg" alt="">
                         <h4>Construction Engineer</h4>
                     </a>
-                    <a href="" class="position">
+                    <a href="login.html" class="position">
                         <img src="/photos/architect.jpg" alt="">
                         <h4>Architect</h4>
                     </a>
