--- a/html-files/construction.html
+++ b/html-files/construction.html
@@ -33,6 +33,13 @@
 
     <!--Content-->
     <main class="page-body">
+
+        <div class="build-page-container-text">
+            <div id="build-container-header">
+                <h1>We Can Help You Build Your Dream House</h1>
+            </div>
+        </div>
+
 <!--Contact Form-->
 <form class="contactform">
     <ul>
