changed the design

--- a/html-files/work-for-us.html
+++ b/html-files/work-for-us.html
@@ -48,8 +48,10 @@
 
         <section class="page-content">
 
-            <h2>Do you see a Future in our Compay?</h2>
-            <span>We Sure Do!</span>
+            <div class="titles">
+                <h2>Do you see a Future in our Compay?</h2>
+                <span>We Sure Do!</span>
+            </div>
 
             <div class="content-positions">
                 <h3>Our Positions</h3>
